2012-02-14  Ingo Renner  <ingo.renner@dkd.de>

	! Changed Index Queue tables to use InnoDB engine

	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
	* Added a column in the Index Queue table to signal that an item has additional indexing properties
	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
	* Added method tx_solr_Site::getPages() to get all pages (page IDs) of a site
	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Added tx_solr_indexqueue_Item::getSite()
	* Added initial API for Index Queue Item Indexing Properties
	* Added Polish Translations, credits Jan Slusarczyk

2012-02-13  Ingo Renner  <ingo.renner@dkd.de>

	!!! Removed compatibility for TYPO3 4.3

	* Fixed issue #27578: Remove references to Solr from editor facing UI
	* Changed text alignment of suggestions so that it is forced to be aligned left
	* Added maxHttpHeaderSize="65536" to server.xml to handle longer GET Request to solr. see also  http://serverfault.com/questions/56691/whats-the-maximum-url-length-in-tomcat
	* Added an option to override the URL stored in the index for a page
	* Changed the name of tx_solr_ConnectionManager::getSiteLanguages() to getSystemLanguages()
	* Added method tx_solr_Site::getLanguages()
	* Added an own implementation for making HTTP requests in tx_solr_indexqueue_PageIndexerRequest to provide better error handling/detection
	* Added tx_solr_Query::setOperator()
	* Fixed issue #30922: PHP Error in Used Facet Renderer
	* Added a check in the install script whether the download mirror can be contacted